fix: better alignment of standalone buttons

--- a/web/css/review-form.css
+++ b/web/css/review-form.css
@@ -82,13 +82,6 @@
   background-color: var(--review-selected-color);
 }
 
-#review-form #confirm-buttons {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-}
-
 #review-form .loading-text {
   width: 100%;
   text-align: center;
@@ -103,6 +96,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+  padding: 0;
 }
 
 .pager-container {
